@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.510 2003-11-12 16:20:44 castaglia Exp $
+$Id: NEWS,v 1.511 2003-11-15 19:52:22 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -38,6 +38,9 @@ CVS
   ExtendedLogs that use the WRITE logging class will now include the
   RNFR and RNTO commands.
 - Mac OS X 10.3 portability fixes.
+- Bug 2274 - Default server only binds to one IP address of host if
+  the --enable-ipv6 configure option is used.  ProFTPD will now properly
+  bind to all addresses for the default "server config" server.
 
 1.2.9 - Released 31-Oct-2003
 ---------------------------------
